# gmssl_for_android

./: .gitignore  README.md
example/GmSSLDemo/: README.md  settings.gradle
example/GmSSLDemo/app/: CMakeLists.txt  build.gradle
example/GmSSLDemo/app/src/androidTest/java/com/example/gmssl/: ExampleInstrumentedTest.kt
example/GmSSLDemo/app/src/main/: AndroidManifest.xml
example/GmSSLDemo/app/src/main/cpp/: native-lib.cpp  utils.h
example/GmSSLDemo/app/src/main/cpp/crypto/ec/: ec_lcl.h
example/GmSSLDemo/app/src/main/cpp/crypto/sm2/: sm2_sign.c
example/GmSSLDemo/app/src/main/java/com/example/gmssl/: App.kt  Crypto.kt  Hex.kt  InputDialog.kt  MainActivity.kt
example/GmSSLDemo/app/src/main/res/layout/: activity_main.xml  dialog_input.xml
example/GmSSLDemo/app/src/main/res/values/: strings.xml
example/GmSSLDemo/app/src/test/java/com/example/gmssl/: ExampleUnitTest.kt
example/GmSSLDemo/gradle/wrapper/: gradle-wrapper.properties
tools/: build-android-common.sh  build-android-gmssl.sh  build-common.sh
